# lockdoc-tools

./: .gitignore  AUTHORS  README.md  calc-percentage.py  conv-import.sh  convert.cc  db-scheme.txt  elixir-setup.txt  generate-lock-symbols.php  get-run-hypothesizer.sh  howto.txt  import.sh  post-process-trace.sh  queries.txt  run-hypothesizer.sh  todo.txt  update-elixir.sh
cocci/: lock-log-all-noseq.cocci  lock-log-seqonly.cocci
convert/: Makefile  git_version.h
coverage/: .gitignore  aggregate-bb2lines.py  kcov-all-ltp-tests.sh  kcov-lib.c  kcov-lib.cc  sortuniq.cc  trace-all-ltp-tests.sh
coverage/bb2lines/: .gitignore  CMakeLists.txt  FindBfd.cmake  bb2lines  binaryread.cpp  binaryread.h  gcov-io.cpp  gcov-io.h  how-to-use  libiberty.h  main.cpp  test-addresses.txt  test.c.gcov
data/: blacklist.csv  data_types.csv  function_blacklist.csv  ground-truth-plain-doc.csv  ground-truth.csv  member_blacklist.csv
hypothesizer/: .gitignore  Makefile  hypothesizer.cc  optionparser.h  optionparser_ext.h
make-full-linux-history/: Makefile  make-full-linux-history.ml
manuals/: BOCHSRC.sample  README.md  README.txt  kcovtrace.c
notes/: inode.txt  instrumentation.txt
processing/: calc-accuracy.r  calc-ro-ratio.py  common.inc.R  counterexample-stats.py  counterexamples-to-code.sh  dists.txt  eval-atomic-member.py  evaluate-sel-strategy.sh  extract-dists.php  gcov-summary.py  gcov-trace.sh  generate-callgraph.py  get-counterexamples.sh  get-process-cex.sh  id-to-lock.sh  locking-rule-checking.py  locking-rule-minig-stats.py  locking-rule-minig-verify.py  plot-dists.r  (+8 more)
(+143 files in other folders)
